--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -50,7 +50,8 @@
     <div class="row">
         <div class="showPage col-md-12 newActionsBtn">
           <span>Creating now Account bla bla bla</span>
-          <button class="btn red newAccountBtn " ng-click="save(account)">Create</button>
+          <button class="btn red newAccountBtn pull-right" ng-click="save(account)">Create</button>
+          <div class="clearfix"></div>
         </div>
        <div class="showPage slimForm col-md-12 margin-bottom-15">             
                      <div class="row">
@@ -303,7 +304,7 @@
             </div>
        </div> 
            </div>
-       </div> 
+      
        </div>
             </div>
               <div class="col-md-3 ">
