Edit custom field on all object, fix #349
Former-commit-id: 3f61328164c2121285def8f4c1029db8a1313262 [formerly 5c8e70a67646be001ecc044662fcb6eb9b5b139d]
Former-commit-id: e0ba277e69fbf0a5ab9fa4e02fc206774f709ab4

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -335,10 +335,10 @@
                                           </div>
                             </li>
                           <li ng-repeat="custom in infonodes.customfields">
-                                    <span editoptions editdataattr="deleteInfonode('<%=custom.entityKey%>','customfields')" editable-text="custom.fields[0].field" onbeforesave="inlinePatch('Infonode','customfields', 'field',website.entityKey,$data)"  >
+                                    <span editoptions editdataattr="deleteInfonode('<%=custom.entityKey%>','customfields')"   >
                                     <%= custom.fields[0].field%>  : </span>
 
-                                  <span>   <%= custom.fields[0].value%> </span>
+                                  <span editable-text="custom.fields[0].value" onbeforesave="inlinePatch('Infonode','customfields', '<%= custom.fields[0].field%>',custom.entityKey,$data)" >   <%= custom.fields[0].value%> </span>
 
                           </li>
                          <li>
