--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -95,7 +95,37 @@
             <div class="row">
             <div class="col-md-6">
               <div class="news-blocks blank-card blank-card-yellow">
-                <h3>Contact Informations</h3>
+                <h3>Lead Informations</h3>
+                  <div class="row">
+                    <div class="form-group selector-margin">
+                        <label  class="required col-md-3 control-label">{{_("Industry")}} </label>
+
+                        <div class="col-md-9">
+                          <select class="form-control" ng-model="lead.industry">
+                            <option value="">--None--</option><option value="Agriculture">Agriculture</option><option value="Apparel">Apparel</option><option value="Banking">Banking</option><option value="Biotechnology">Biotechnology</option><option value="Chemicals">Chemicals</option><option value="Communications">Communications</option><option value="Construction">Construction</option><option value="Consulting">Consulting</option><option value="Education">Education</option><option value="Electronics">Electronics</option><option value="Energy">Energy</option><option value="Engineering">Engineering</option><option value="Entertainment">Entertainment</option><option value="Environmental">Environmental</option><option value="Finance">Finance</option><option value="Food &amp; Beverage">Food &amp; Beverage</option><option value="Government">Government</option><option value="Healthcare">Healthcare</option><option value="Hospitality">Hospitality</option><option value="Insurance">Insurance</option><option value="Machinery">Machinery</option><option value="Manufacturing">Manufacturing</option><option value="Media">Media</option><option value="Not For Profit">Not For Profit</option><option value="Recreation">Recreation</option><option value="Retail">Retail</option><option value="Shipping">Shipping</option><option value="Technology">Technology</option><option value="Telecommunications">Telecommunications</option><option value="Transportation">Transportation</option><option value="Utilities">Utilities</option><option value="Other">Other</option>>
+                          </select>
+
+                        </div>
+
+                    </div>
+                  <div class="form-group selector-margin">
+                    <label  class="required col-md-3 control-label">{{_("Source")}} </label>
+                    <div class="col-md-9">
+                        <select class="form-control" ng-model="lead.source" >
+                          <option value="">--None--</option>
+                          <option value="Social Media">Social Media</option>
+                          <option value="Web Source">Web Site</option>
+                          <option value="Phone Inquiry">Phone Inquiry</option>
+                          <option value="Partner Referral">Partner Referral</option>
+                          <option value="Purchased List">Purchased List</option>
+                          <option value="Other">Other</option>
+                          </select>
+
+                    </div>
+                  </div>
+                
+                  <br>
+                </div>
                 <div class="news-block-tags">
                   <strong>Phone</strong>
                 </div>
