adding create button to the header on scroll
Former-commit-id: e4e706873b800936b65d5729b8f6b663ac840151 [formerly 4b644983f141de668843837f2f7f1745a9ba6858]
Former-commit-id: eca40f76be4bdd9ffa7cca025616ea188ace8724

--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -7,7 +7,7 @@
     </h2>
         <div class="filterOptions">
         <div class="btn-group">
-            <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" ng-click="filterByOwner('{{ME}}');selectedOption ='sort'">
+            <a class="filterItem" href="#" data-toggle="dropdown">
               Filter
               <i class="icon-angle-down"></i>
             </a>
@@ -21,7 +21,7 @@
             </ul>
         </div>
         <div class="btn-group">
-            <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" ng-click="filterByOwner('{{ME}}');selectedOption ='sort'">
+            <a class="filterItem" href="#" data-toggle="dropdown">
               Sort
               <i class="icon-angle-down"></i>
             </a>
