finishing filter top bar on account list
Former-commit-id: 0686aa93d9ca989a3a40d96692c05835959c2260 [formerly caec01d6c0d3e97e0138971b626cfd3d5dfbdea2] [formerly d3f4cd478c7df32cb33852b5f92377d95624c1fc [formerly 1100ab9abe07262d0744e64cb479077f0588660e]]
Former-commit-id: d2d57aebfa3d5da7cbd278e9553505d673cd8772 [formerly 07e5ef122a30ed074939d04b9652d1240e9dda51]
Former-commit-id: 5b6523f0bdb54d0adb6f9e57307515377e2ebd88

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -6,22 +6,8 @@
       {{active_app.label}}
     </h2>
       <div class="filterOptions">
-        <span role="button" class="filterItem activeFilter" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All Accounts</span>
-        <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My Accounts</span>
-        <div class="btn-group">
-            <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" ng-click="filterByOwner('{{ME}}');selectedOption ='sort'">
-              More
-              <i class="icon-angle-down"></i>
-            </a>
-            <ul class="dropdown-menu">
-              <li>
-                <a ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a>
-              </li>
-              <li>
-                <a ng-click="orderBy('name')" href="#" data-toggle="modal">{{ _('Name') }}</a>
-              </li>
-            </ul>
-        </div>
+        <span role="button" class="filterItem activeFilter" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Accounts</span> </span>
+        <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Accounts</span></span>
         <div class="btn-group">
             <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" ng-click="filterByOwner('{{ME}}');selectedOption ='sort'">
               Sort by
@@ -37,7 +23,7 @@
             </ul>
       </div>
         <a href="/#/accounts/new" class="btn red afterScrollBtn hidden">
-           New Account 
+           New <span class="hidden-xs hiddenOnxs">Account</span> 
          </a>
       </div>
     </div> 
