--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -36,7 +36,7 @@
   <div class="col-md-9">
       <div class="row">
           <div class="showPage col-md-12 newActionsBtn">
-          <span>Creating now Account </span>
+          <span>Creating now Lead </span>
           <button class="btn red newAccountBtn pull-right" ng-click="save(casee)">Create</button>
           <div class="clearfix"></div>
         </div>
