filter and sort on Contact
Former-commit-id: 89dc61686d46deda0d006022a2dc1c34fe158a19 [formerly b77729bbe48e2f9cd86885ea873bc215e5def56d] [formerly 2a2256afec61dc164830b864c3ccf75bd939ae4c [formerly 7caeaf29222ad8b1dbe8cbe3758195271e51619f]]
Former-commit-id: 51e42e6bbdd16374cdba3e7665987e05c72b90d6 [formerly 28cef5209b03e8605fe008c71cc2a0cdc4a778fa]
Former-commit-id: 9c5c30a31da2fe7fb0a766439f9a53857a2b4105

--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -12,7 +12,7 @@
         onbeforesave="inlinePatch('Lead','', 'lastname',lead.entityKey,$data)" > <%= lead.lastname %>
       </a>
     </h2>
-    <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(casee)">Create</button>
+    <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(lead)">Create</button>
   </div>
   </div>
 </div>
@@ -37,7 +37,7 @@
       <div class="row">
           <div class="showPage col-md-12 newActionsBtn">
           <span>Creating now Lead </span>
-          <button class="btn red newAccountBtn pull-right" ng-click="save(casee)">Create</button>
+          <button class="btn red newAccountBtn pull-right" ng-click="save(lead)">Create</button>
           <div class="clearfix"></div>
         </div>
     <div class="showPage slimForm col-md-12">
