fixing photo upload button on account and contact
Former-commit-id: 4e9760a48ffebb338b63fb23affbfd9cd8649501 [formerly 0c212189c7b8ad0180214f7bf9530a5984230a20] [formerly 0ab9bb5935037d08ee45ece5cb61a13cd161a55e [formerly dff3aff7c68d1347826c53d33ed21d291c046d69]]
Former-commit-id: bc7f0ffeee4e417de3adcfc67e7f324f43032aa5 [formerly 9c6964563b82aeedde4c4af5bd123356eb74afcf]
Former-commit-id: 4d263110c59d41652be48d1fa563069a07f77f0a

--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -70,10 +70,10 @@
                           <div class="pic">
                               <img alt="<%=account.name%>" ng-src="<%=imageSrc%>" class="img-responsive img-thumbnail">
                          </div>
-                          <a ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal">
+                          <a ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload btn-upload-account" data-toggle="modal">
                                 <img src="/static/img/upload_logo.png" >
                           </a>
-
+                            <div  class="responsivePhotoIconAcc"></div>
                         </div>
                       </div>
 
@@ -365,7 +365,7 @@
                               </div>
                               <div class="col-md-8 col-xs-8">
                                 <span class="name">
-                                  <%= contact.firstName %> <%= contact.lastname %>
+                                  <%= contact.firstname %> <%= contact.lastname %>
                                   </span>
                                   <span><%= contact.title%></span>
                                 </span>
