--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -48,12 +48,12 @@
           <div class="row margin-bottom-10">
             <div class="col-md-2" ng-mouseenter="showUpload= true" ng-mouseleave="showUpload = false">
               <div class="pic">
-
-                           <img alt="<%=contact.firstname%> <%=contact.lastname%>" ng-src="<%=imageSrc%>" class="img-responsive profile-photo-large" >
-               </div>
-               <a ng-show="showUpload" ng-click="createLogoPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal" style="display: none;">
+                  <img alt="<%=contact.firstname%> <%=contact.lastname%>" ng-src="<%=imageSrc%>" class="img-responsive profile-photo-large" >
+                  <a ng-show="showUpload" ng-click="createLogoPickerUploader()" href="" class="btn btn-default btn-upload btn-upload-contact" data-toggle="modal" style="display: none;">
                  <img src="/static/img/upload_logo.png">
                </a>
+               <div ng-show="showUpload" class="responsivePhotoIcon"></div>
+               </div>
             </div>
             <div class="col-md-10">
               <div class="row">
