finishing filter top bar
Former-commit-id: 4bf6f8f20c3f2335eef6695515e58df7a39af5d5 [formerly a29ab92f994479afd7215f29b8b604b91ab9eeb9] [formerly f32fa4f3bf6d16efe1e5f60697f1e7644b72c290 [formerly 418ad298bc474e61d10bb382cbb72b3766041895]]
Former-commit-id: 77968dcb14f137d3b7dabfbeb050791e77dc1dcc [formerly 58f277ae823922eb32ef0711c052ce5330f5640e]
Former-commit-id: 03c0fa7c1af61d71be16da198ad829be5728ee20

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -1,15 +1,16 @@
 <div class="row subHeader">
   <div class="subHContent">
     <div class="currentApp">
+
      <h2 class="page-title">
+     <p class="fittext autoresizeName" max-font-size="18" text="testtitle" style="height:20px; width:195px"></p>
      <!--  <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png"> -->
-      {{active_app.label}}
     </h2>
       <div class="filterOptions">
         <span role="button" class="filterItem activeFilter" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Accounts</span> </span>
         <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Accounts</span></span>
         <div class="btn-group">
-            <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" ">
+            <a class="filterItem" href="#" data-toggle="dropdown" ng-class="{activeFilter: selectedOption =='sort'}">
               Sort by
               <i class="icon-angle-down"></i>
             </a>
