--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -6,19 +6,19 @@
       {{active_app.label}}
     </h2>
         <div class="filterOptions">
+        <span role="button" class="filterItem activeFilter hidden-xs hiddenOnxs" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Opportunities</span> </span>
+        <span role="button" class="filterItem hidden-xs hiddenOnxs" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Opportunities</span></span>
         <div class="btn-group">
             <a class="filterItem" href="#" data-toggle="dropdown">
-              Filter
+              <span class="showOnxs">Filter</span>
+              <span class="hidden-xs hiddenOnxs">Stages</span>
               <i class="icon-angle-down"></i>
             </a>
-            <ul class="dropdown-menu">
-              <li>
-                <a ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a>
-              </li>
-              <li>
-                <a ng-click="orderBy('name')" href="#" data-toggle="modal">{{ _('Name') }}</a>
-              </li>
-            </ul>
+             <ul class="dropdown-menu">
+                  <li class="visible-xs"><a  ng-click="filterByOwner()" href="#" data-toggle="modal">{{ _('All opportunities') }}</a></li>
+         <li class="visible-xs"><a ng-click="filterByOwner('{{ME}}')" href="#" data-toggle="modal">{{ _('My opportunities') }}</a></li>
+                 <li ng-repeat="stage in opportunitystages"><a ng-click="filterByStage('<%=stage.name%>')" href="#" data-toggle="modal"><%= stage.name %></a></li>
+             </ul>
         </div>
         <div class="btn-group">
             <a class="filterItem" href="#" data-toggle="dropdown">
